add some RUNTIME_PACKAGES dependencies

--- a/components/games/etlegacy/Makefile
+++ b/components/games/etlegacy/Makefile
@@ -60,3 +60,7 @@ CMAKE_OPTIONS += -DBUNDLED_OPENSSL=0
 CMAKE_OPTIONS += -DBUNDLED_WOLFSSL=0
 
 # Auto-generated dependencies
+REQUIRED_PACKAGES += $(GCC_RUNTIME_PKG)
+REQUIRED_PACKAGES += $(GXX_RUNTIME_PKG)
+REQUIRED_PACKAGES += image/library/libjpeg8-turbo
+REQUIRED_PACKAGES += library/zlib
